fix: bg-image jumps

--- a/momentum/style.css
+++ b/momentum/style.css
@@ -47,9 +47,11 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  border: none;
   background-color: rgba(41, 41, 41, 0.6);
 
   user-select: none;
+  color: white;
   font-size: 3rem;
   line-height: 3.5rem;
   transition: all 0.5s ease;
@@ -62,9 +64,11 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  border: none;
   background-color: rgba(41, 41, 41, 0.6);
 
   user-select: none;
+  color: white;
   font-size: 3rem;
   line-height: 3.5rem;
   transition: all 0.5s ease;
@@ -76,7 +80,7 @@ body {
 }
 
 .left-btn:active, .right-btn:active {
-  bottom: -54px;
+  bottom: -55px;
 }
 
 .wrapper-date {
@@ -121,8 +125,13 @@ h2 {
   opacity: 0.8;
 }
 
+button:active, button:focus {
+  outline: none;
+}
+
 @media (max-width: 700px) {
   .time {
     /*font-size: 6rem;*/
   }
 }
+
